--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,15 @@
         <a id="usernameNav" href="#">Profile</a>
         <nav class="navbar">
             <div class="interaction-links">
-                <a class="navbar__item" href="#">Home</a>
-                <a class="navbar__item" href="#">Dashboard</a>
+                <a class="navbar__item" href="./home.html">Home</a>
+                <a class="navbar__item" href="#">Products</a>
                 <a class="navbar__item" href="#">Login</a>
-                <a class="navbar__item" href="#">Register</a>
+                <a class="navbar__item" href="./register.html">Register</a>
             </div>
 
         </nav>
         <a id="userLogout" href="#">Logout</a>
+        
     </header>
     <script src="./app.js"></script>
 </body>
